<resources>
    <string name="app_name">Calculadora</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonSub">-</string>
    <string name="buttonSom">+</string>
    <string name="buttonIg">=</string>
    <string name="buttonpar1">(</string>
    <string name="buttonpar2">)</string>
    <string name="buttonMult">*</string>
    <string name="buttonDiv">/</string>
    <string name="buttonPot">^</string>
    <string name="buttonC">C</string>
    <string name="buttonPont">.</string>
    <string name="txtHistorico">Histórico</string>
    <string name="buttonHistorico">Visualizar Histórico</string>
</resources>