<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0B0B0B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtexpressao"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_gravity="end"
        android:maxLines="1"
        android:textColor="@color/texto"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="#EC683E"
                android:text="@string/buttonC"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonPar1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonpar1"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonPar2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonpar2"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClickOperacoes"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonDiv"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button7"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button8"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button9"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClickOperacoes"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonMult"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button4"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button5"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button6"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClickOperacoes"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonSub"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button1"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button2"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button3"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonSom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClickOperacoes"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonSom"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClickOperacoes"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonPot"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonIg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonIg"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:layout_weight="1"
                android:text="@string/button0"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonPont"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="onClickOperacoes"
                android:layout_weight="1"
                android:background="#EC683E"
                android:text="@string/buttonPont"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHistorico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/buttonHistorico"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>